# taprootized-atomic-swaps

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.example.toml  package-lock.json  package.json
.github/actions/circom-setup/: action.yaml
.github/actions/rust-setup/: action.yaml
.github/workflows/: circom.yaml  contracts.yaml  rust.yaml
circuits/: atomic_swap.circom  main.circom
circuits/bigint/: bigint.circom
circuits/ecdsa/: ecdsa.circom  ecdsa_func.circom
circuits/secp256k1/: secp256k1.circom  secp256k1_func.circom  secp256k1_utils.circom
contracts/: .env.example  .gitignore  .solhint.json  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/contracts/: Depositor.sol
contracts/deploy/: 1_depositor.migration.ts
contracts/test/: Depositor.test.ts
contracts/test/helpers/: index.ts  poseidon-hash.ts
crates/rapidsnark/: Cargo.toml
crates/rapidsnark-sys/: Cargo.toml  build.rs  prover.h
crates/rapidsnark-sys/src/: lib.rs
crates/rapidsnark/src/: lib.rs  verifier.rs
crates/witness_calculator/: Cargo.toml
crates/witness_calculator/src/: lib.rs  wasm.rs
examples/atomic-swap/: config.example.toml  config.rs  main.rs
scripts/: README.md  atomic-swap-pre-build.sh  compile-circuit.sh  export-keys.sh  prove.sh  trusted-setup.sh  verify.sh
src/: config.rs  depositor.rs  depositor_contract.rs  main.rs
