[package]
name    = "taprootized-atomic-swaps"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
eyre            = { version = "0.6.11",  default-features = false }
poseidon-rs     = { version = "0.0.10",  default-features = false }
clap            = { version = "4.4.18",  default-features = false, features = ["std"] }
ethers          = { version = "2.0.11",  default-features = false }
config          = { version = "0.13.4",  default-features = false, features = ["toml"] }
serde           = { version = "1.0.130", default-features = false }

[dependencies.bdk]
git              = "https://github.com/velykodnyi/bdk"
tag              = "0.28.2+fix.2"
features         = ["rpc", "std"]
default-features = false
