[package]
name    = "rapidsnark"
version = "0.1.0"
edition = "2021"

[dependencies]
libc           = { version = "0.2.152" }
rapidsnark-sys = { path = "../rapidsnark-sys" }

thiserror   = { version = "1.0.39" }
num         = { version = "0.4.0",   features = ["serde"] }
serde       = { version = "1.0.195", features = ["derive"] }
serde_json  = { version = "1.0.111" }

ark-ec                = { version = "=0.4.1", default-features = false, features = ["parallel"] }
ark-ff                = { version = "=0.4.1", default-features = false, features = ["parallel", "asm"] }
ark-bn254             = { version = "=0.4.0" }
ark-groth16           = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-relations         = { version = "0.4.0" }
ark-crypto-primitives = { version = " 0.4.0" }